--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body{
   background: pink;
   text-align: center;
 }
+.info-box {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 20px;
+  border-radius: 5px;
+}
