--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@ body{
   background: pink;
   text-align: center;
 }
-/**
+
 .info-box {
-    border: 20px solid #000; /* You can change the color (e.g., #000 for black) and thickness of the border 
-    padding: 2px;
-    margin: 50px;
-    border-radius: 5px;
-}*/
+    border: 5px solid #000;
+    margin: 100px;
+}
