--- a/style.css
+++ b/style.css
@@ -6,5 +6,7 @@ body{
 .info-box {
     border: 5px solid #000;
     padding: 10px;
-    margin: 100px;
+    margin: 20px, 100px, 20px, 100px;
+    margin-top: 20px;
+
 }
