--- a/style.css
+++ b/style.css
@@ -2,10 +2,9 @@ body{
   background: pink;
   text-align: center;
 }
-
+/**
 .info-box {
     border: 5px solid #000;
     padding: 10px;
     margin: 20px, 100px, 20px, 100px;
-
-}
+}*/
